[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/interface/stats/stats_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/RussoOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/menu/Montserrat-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/menu/russo.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )
fallback/0 = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[node name="Stats" type="Control"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 344.0
margin_bottom = 120.0
color = Color( 0.819608, 0.819608, 0.819608, 1 )

[node name="points_label" type="Label" parent="ColorRect"]
margin_left = 16.0
margin_top = 5.0
margin_right = 146.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 24, 7 )
custom_colors/font_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
custom_fonts/font = SubResource( 1 )
text = "Points: 0"

[node name="time_left_label" type="Label" parent="ColorRect"]
margin_left = 176.0
margin_top = 5.0
margin_right = 321.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "Time left: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown_ability1_label" type="Label" parent="ColorRect"]
margin_left = 16.0
margin_top = 45.0
margin_right = 161.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Beam: Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown_ability2_label" type="Label" parent="ColorRect"]
margin_left = 16.0
margin_top = 85.0
margin_right = 162.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
custom_fonts/font = SubResource( 2 )
text = "Bite: Ready"
__meta__ = {
"_edit_use_anchors_": false
}
